subscription mobile issue resolved

--- a/assets/main.css
+++ b/assets/main.css
@@ -2716,14 +2716,14 @@ ul {
 }
 .product-details-section .product-details-wrapper .product-content-wrapper .product-inner-content-wrapper .product-stock .stock-status {
   position: relative;
-  margin-left: 20px;
+  margin-left: 25px;
   text-transform: uppercase;
 }
 .product-details-section .product-details-wrapper .product-content-wrapper .product-inner-content-wrapper .product-stock .stock-status::after {
   content: "";
   position: absolute;
   top: 50%;
-  left: -20px;
+  left: -25px;
   transform: translateY(-50%);
   height: 10px;
   width: 10px;
@@ -2756,6 +2756,15 @@ ul {
 .product-details-section .product-details-wrapper .product-content-wrapper .product-inner-content-wrapper #seal-subscription .sls-price {
   font-family: "Brandon Grotesque", "Helvetica Neue";
   font-size: 16px;
+}
+@media (max-width: 1023px) {
+  .product-details-section .product-details-wrapper .product-content-wrapper .product-inner-content-wrapper #seal-subscription .sealsubs-container {
+    margin-bottom: 0;
+  }
+}
+.product-details-section .product-details-wrapper .product-content-wrapper .product-inner-content-wrapper #seal-subscription .sealsubs-container .sls-more-info-container {
+  padding-bottom: 0;
+  padding-left: 0;
 }
 .product-details-section .product-details-wrapper .product-content-wrapper .product-inner-content-wrapper .product-details-cta-wrapper {
   display: flex;
